<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="global_application_name">batdroid</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_about">About</string>
    <string name="main_activity_showlog">Show Log</string>
    <string name="main_activity_temperatureunit">°C</string>
    <string name="main_activity_accesscontrol">Access Control</string>
    <string name="log_activity_nologfile">Unable to open log-File. File does not exist!</string>
    <string name="main_layout_presstostart">- Press to start B.A.T.M.A.N. -</string> 
    <string name="main_layout_presstostop">- Press to stop B.A.T.M.A.N. -</string> 
    <string name="accesscontrol_activity_reloadclientlist">Reload Client-List</string>
    <string name="accesscontrol_activity_applysettings">Apply Settings</string>
    <string name="accesscontrol_layout_connectedclients">Connected/Authorized Clients:</string>
        <string name="accesscontrol_layout_apply">Apply</string>
    <string name="setup_activity_reinstall">(Re)-Install binaries/configs</string>
        <string name="setup_layout_category_bluetooth">Bluetooth</string>
        <string name="setup_layout_category_wifi">Wifi</string>
        <string name="setup_layout_category_security">Security</string>
        <string name="setup_layout_category_lan">LAN</string>
        <string name="setup_layout_category_notifications">Notifications</string>
        <string name="setup_layout_category_misc">Miscellaneous</string>
        <string name="setup_layout_usebluetooth">Use Bluetooth</string>
        <string name="setup_layout_usebluetooth_summary">Bluetooth PAN tether instead of WiFi</string>
        <string name="setup_layout_dontdisablewifi">Don\'t disable WiFi</string>
        <string name="setup_layout_dontdisablewifi_summary">Leave WiFi state alone</string>
        <string name="setup_layout_discoverable">Discoverable</string>
        <string name="setup_layout_discoverable_summary">Make device discoverable for 120 seconds on start-up</string>
        <string name="setup_layout_wifiencryption">Enable WiFi-Encryption</string>
        <string name="setup_layout_wifiencryption_summary">Turn on wifi-encrytion</string>
        <string name="setup_layout_encryptionsetup">Encryption setup method</string>
        <string name="setup_layout_encryptionsetup_summary">Change WiFi-Ecryption setup method</string>
        <string name="setup_layout_passphrase">Change Passphrase</string>
        <string name="setup_layout_passphrase_summary">Change Passphrase for WiFi-Encryption</string>
        <string name="setup_layout_passphrase_dialog_title">Enter Passphrase</string>
        <string name="setup_layout_ssid">Change SSID</string>
        <string name="setup_layout_ssid_summary">Change SSID</string>
        <string name="setup_layout_ssid_dialog_title">Enter SSID</string>
        <string name="setup_layout_ssid_dialog_message">Only alpha-numeric characters and \'.\', \'_\' allowed!</string>
        <string name="setup_layout_ip">Change IP address</string>
        <string name="setup_layout_ip_summary">Change IP address</string>
        <string name="setup_layout_ip_dialog_title">Enter IP address</string>
        <string name="setup_layout_ip_dialog_message">Only alpha-numeric characters and \'.\', \'/\' allowed!</string>
        <string name="setup_layout_netmask">Change netmask</string>
        <string name="setup_layout_netmask_summary">Change netmask</string>
        <string name="setup_layout_netmask_dialog_title">Enter netmask</string>
        <string name="setup_layout_netmask_dialog_message">Only alpha-numeric characters and \'.\', \'/\' allowed!</string>
        <string name="setup_layout_channel">Change Channel</string>
        <string name="setup_layout_channel_summary">Wireless frequency channel</string>
        <string name="setup_layout_channel_dialog_title">Select Channel</string>
        <string name="setup_layout_txpower">Transmit Power</string>
        <string name="setup_layout_txpower_summary">Reduce transmit power</string>
        <string name="setup_layout_txpower_dialog_title">Reduce Power</string>
        <string name="setup_layout_accesscontrol">Enable Access-Control</string>
        <string name="setup_layout_accesscontrol_summary">Turn on access-control</string>       
        <string name="setup_layout_lan">Change LAN</string>
        <string name="setup_layout_lan_summary">LAN network settings</string>
        <string name="setup_layout_lan_dialog_title">Select LAN-Network</string>
        <string name="setup_layout_notification">Client Notification Mode</string>
        <string name="setup_layout_notification_summary">Client Notification Mode settings</string>
        <string name="setup_layout_notification_dialog_title">Select Client Notification Mode</string>  
        <string name="setup_layout_vibrate">Vibrate on connect</string>
        <string name="setup_layout_vibrate_summary">Vibrate when a client connects</string>
        <string name="setup_layout_ringtone">Notification Ringtone</string>
        <string name="setup_layout_ringtone_summary">Ringtone to use with notifications</string>
        <string name="setup_layout_updatecheck">Disable Update-Check</string>
        <string name="setup_layout_updatecheck_summary">Turn off update-check at startup</string>
        <string name="setup_layout_wakelock">Disable Wake-Lock</string>
        <string name="setup_layout_wakelock_summary">Turn off wake-lock while B.A.T.M.A.N. is running</string>
        <string name="setup_layout_battery">Disable Battery-Temperature</string>
        <string name="setup_layout_battery_summary">Hide battery-temperatur info</string>
        <string name="about_layout_version">Version:</string>
        <string name="about_layout_projecthome">Project-Home:</string>
        <string name="about_layout_license">License:</string>
        <string name="about_layout_authors">Authors:</string>
        <string name="about_layout_contributors">Contributors:</string>
        <string name="about_layout_software">3rd-Party-Software:</string>
        <string name="clientrow_layout_macaddress">MAC-Address:</string>
        <string name="clientrow_layout_name">Name</string>
        <string name="clientrow_layout_ipaddress">IP-Address</string>
        <string name="donate_layout_line1">If you like this application, then please consider a donation to help with this project.</string>
        <string name="donate_layout_line2">By donating you provide support to an open source project.</string>
        <string name="donate_layout_line3">If you want to donate later, you can do so from the \'About\' dialog.</string>
        <string name="donate_layout_line4">Thank you!</string>
        <string name="noaccesscontrol_layout_line1">Sorry, but your kernel does not have all necessary features for the Access Control feature of this application. Access Control will be disabled.</string>
        <string name="noaccesscontrol_layout_line2">Please see our FAQ: http://code.google.com/p/android-batdroid/wiki/FAQ</string>
        <string name="nonetfilter_layout_line1">Sorry, but your kernel does not have all necessary features for running this application.</string>
        <string name="nonetfilter_layout_line2">Please see our FAQ: http://code.google.com/p/android-batdroid/wiki/FAQ</string>
        <string name="noroot_layout_line1">Sorry, but your kernel does not have all necessary features for running this application.</string>
        <string name="update_layout_line1">There is an update available!</string>
        <string name="update_layout_line2">Do you want to install this update now?</string>
        
        <string name="paypalUrl">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4146444</string>
    <string-array name="notificationmodevalues">  
                <item>0</item>  
                <item>1</item>  
                <item>2</item>  
        </string-array>
    <string-array name="notificationmodenames">  
                <item>None</item>  
                <item>Unauthorized Clients</item>  
                <item>All Clients</item>
        </string-array>
    <string-array name="powermodevalues">  
                <item>0</item>  
                <item>1</item>  
                <item>2</item>  
                <item>3</item> 
        </string-array>
    <string-array name="channelvalues">  
                <item>1</item>  
                <item>2</item>  
                <item>3</item>  
                <item>4</item>  
                <item>5</item>  
                <item>6</item>  
                <item>7</item>  
                <item>8</item>  
                <item>9</item>  
                <item>10</item>  
                <item>11</item>  
                <item>12</item>  
                <item>13</item>  
                <item>14</item>  
        </string-array>
    <string-array name="channelnames">  
                <item>Channel 01 (2412 MHz)</item>  
                <item>Channel 02 (2417 MHz)</item>  
                <item>Channel 03 (2422 MHz)</item>  
                <item>Channel 04 (2427 MHz)</item>  
                <item>Channel 05 (2432 MHz)</item>  
                <item>Channel 06 (2437 MHz)</item>  
                <item>Channel 07 (2442 MHz)</item>  
                <item>Channel 08 (2447 MHz)</item>  
                <item>Channel 09 (2452 MHz)</item>  
                <item>Channel 10 (2457 MHz)</item>  
                <item>Channel 11 (2462 MHz)</item>  
                <item>Channel 12 (2467 MHz)</item>  
                <item>Channel 13 (2472 MHz)</item>  
                <item>Channel 14 (2484 MHz)</item>  
        </string-array>         
    <string-array name="lannetworkvalues">  
                <item>192.168.1.0/8</item>  
				<item>192.168.1.0/24</item>  
                <item>192.168.2.0/24</item> 
                <item>192.168.3.0/24</item> 
                <item>172.20.21.0/24</item>  
                <item>172.20.22.0/24</item>
                <item>172.20.23.0/24</item>   
                <item>10.10.1.0/24</item>  
                <item>10.10.2.0/24</item>  
                <item>10.10.3.0/24</item> 
                <item>10.0.0.0/8</item> 
				<item>10.130.1.0/24</item> 
	
        </string-array>
    <string-array name="powernames">  
                <item>Disabled</item>
                <item>3 mW (5 dBm)</item>  
                <item>5 mW (7 dBm)</item>  
                <item>10 mW (10 dBm)</item>  
                <item>15 mW (12 dBm)</item>  
                <item>20 mW (13 dBm)</item>  
                <item>25 mW (14 dBm)</item>  
                <item>30 mW (15 dBm)</item>  
        </string-array>         
    <string-array name="powervalues">  
                <item>disabled</item>  
                <item>3mW</item>  
                <item>5mW</item>  
                <item>10mW</item>  
                <item>15mW</item>  
                <item>20mW</item>  
                <item>25mW</item>  
                <item>30mW</item>  
        </string-array>  
    <string-array name="encsetupnames">  
                <item>Auto</item>
                <item>iwconfig</item>  
                <item>wpa_supplicant</item>  
        </string-array>         
    <string-array name="encsetupvalues">  
                <item>auto</item>  
                <item>iwconfig</item>  
                <item>wpa_supplicant</item>  
        </string-array>                   
</resources>
